//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "dxos/halo/keys.proto";

package dxos.halo.credentials.identity;

// Additional, descriptive information about an Identity. Must be signed by the Identity's key.
message IdentityInfo {
  keys.PubKey publicKey = 1;    // The publicKey of the Identity (must be signed by this key).
  string displayName = 2;       // The display name to use for this key.
}

// Additional, descriptive information about a Device. Must be signed by the Device's key.
message DeviceInfo {
  keys.PubKey publicKey = 1;    // The publicKey of the Device (must be signed by this key).
  string displayName = 2;       // The display name to use for this key.
}
